ArchLinux/iptables.rules
# Generated by iptables-save v1.4.21 on Mon Mar 28 22:09:16 2016
*nat
:PREROUTING ACCEPT [2:656]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [6:456]
:POSTROUTING ACCEPT [6:456]
COMMIT
# Completed on Mon Mar 28 22:09:16 2016
# Generated by iptables-save v1.4.21 on Mon Mar 28 22:09:16 2016
*mangle
:PREROUTING ACCEPT [8:1112]
:INPUT ACCEPT [8:1112]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8:608]
:POSTROUTING ACCEPT [8:608]
:connman-INPUT - [0:0]
:connman-POSTROUTING - [0:0]
-A INPUT -j connman-INPUT
-A POSTROUTING -j connman-POSTROUTING
-A connman-INPUT -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A connman-POSTROUTING -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
COMMIT
# Completed on Mon Mar 28 22:09:16 2016
# Generated by iptables-save v1.4.21 on Mon Mar 28 22:09:16 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:logdrop - [0:0]
:tcp - [0:0]
-A INPUT -p tcp -j tcp
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i all -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -i all -p udp -m udp --sport 53 --dport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i all -p udp -m multiport --sports 68,67 -m multiport --dports 67,68 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i all -p udp -m udp --sport 123 --dport 123 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i all -p udp -m udp --sport 636 --dport 636 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i all -p udp -m udp --sport 5353 --dport 5353 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i all -p tcp -m tcp --sport 22 --dport 22 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i all -p tcp -m multiport --sports 80,443 -m multiport --dports 80,443 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i all -p tcp -m tcp --sport 631 --dport 631 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i all -p tcp -m tcp --sport 636 --dport 636 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i all -p tcp -m tcp --sport 993 --dport 993 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j logdrop
-A FORWARD -j logdrop
-A OUTPUT -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o all -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -o all -p udp -m udp --sport 53 --dport 53 -j ACCEPT
-A OUTPUT -o all -p udp -m udp --sport 123 --dport 123 -j ACCEPT
-A OUTPUT -o all -p udp -m udp --sport 636 --dport 636 -j ACCEPT
-A OUTPUT -o all -p udp -m udp --sport 5353 --dport 5353 -j ACCEPT
-A OUTPUT -o all -p tcp -m tcp --sport 22 --dport 22 -j ACCEPT
-A OUTPUT -o all -p tcp -m multiport --sports 80,443 -m multiport --dports 80,443 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o all -p tcp -m tcp --sport 631 --dport 631 -j ACCEPT
-A OUTPUT -o all -p tcp -m tcp --sport 636 --dport 636 -j ACCEPT
-A OUTPUT -o all -p tcp -m tcp --sport 993 --dport 993 -j ACCEPT
-A OUTPUT -j logdrop
-A logdrop -m limit --limit 2/min -j LOG --log-prefix "Dropped: "
-A logdrop -j DROP
COMMIT
# Completed on Mon Mar 28 22:09:16 2016
